# RobStatTM-py

./: README.md  pyproject.toml  robstattm_comparison.html  robstattm_comparison.qmd  setup.py
robstattm/: __init__.py  _utils.py  loc_scale.py
tests/: test_loc_scale.py
